fixed text alignment in benefit section

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,3 +82,20 @@
   top: 25rem;
   right: 0rem;
 }
+
+.benefit--section::after {
+  content: " ";
+  width: 28.125rem;
+  height: 28.125rem;
+  border-radius: 28.125rem;
+  background: #53bd95;
+  position: absolute;
+  z-index: -1;
+  filter: blur(7rem);
+  opacity: 0.4;
+}
+
+.benefit--section::after {
+  top: 10rem;
+  right: -10rem;
+}
